--- a/index.html
+++ b/index.html
@@ -1,74 +1,126 @@
 <!DOCTYPE html>
-<html>
-
+<html lang="en">
   <head>
-    <meta charset='utf-8' />
-    <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <meta name="description" content="Chushao.github.io : " />
+    <meta charset="utf-8">
+    <title>Chu Shao's Webpage</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+    <!-- Loading Bootstrap -->
+    <link href="bootstrap/css/bootstrap.css" rel="stylesheet">
 
-    <title>Chushao.github.io</title>
+    <!-- Loading Flat UI -->
+    <link href="css/flat-ui.css" rel="stylesheet">
+
+    <link rel="shortcut icon" href="images/favicon.ico">
+
+    <!-- HTML5 shim, for IE6-8 support of HTML5 elements. All other JS at the end of file. -->
+    <!--[if lt IE 9]>
+      <script src="js/html5shiv.js"></script>
+    <![endif]-->
   </head>
-
   <body>
+    <div class="topPart">
+      <div class="container">
+        <div id="top">
+        <div class="chu-headline">
+          <h1 class="chu-logo">
+            <div class="logo"></div>
+            Chu Shao
+            <small>software engineer | deejay</small>
+            <a href="mailto:chu@cshao.me"><small>chu@cshao.me</small></a>
+          </h1>
+        </div> <!-- /demo-headline -->
+      </div>
 
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/chushao">View on GitHub</a>
 
-          <h1 id="project_title">Chushao.github.io</h1>
-          <h2 id="project_tagline"></h2>
+        <div class="row demo-row">
+          <div class="span3">
+            <a onclick="$('.programmingLanguage').slideDown(); $('.projects, .relatedCoursework, .experience, .resume, .aboutMe, .music, .externalLinks').slideUp(); $('html, body').animate({scrollTop: $('.programmingLanguage').offset().top }, 600);" class="btn btn-large btn-block btn-pl">Programming Languages</a>
+          </div>
+          <div class="span3">
+            <a onclick="$('.projects').slideDown(); $('.programmingLanguage, .relatedCoursework, .experience, .resume, .aboutMe, .music, .externalLinks').slideUp(); $('html, body').animate({scrollTop: $('.projects').offset().top }, 600);" class="btn btn-large btn-block btn-projects">Projects</a>
+          </div>
+          <div class="span3">
+            <a onclick="$('.relatedCoursework').slideDown(); $('.programmingLanguage, .projects, .experience, .resume, .aboutMe, .music, .externalLinks').slideUp(); $('html, body').animate({scrollTop: $('.relatedCoursework').offset().top }, 600);" class="btn btn-large btn-block btn-rc">Related Coursework</a>
+          </div>
+          <div class="span3">
+            <a onclick="$('.experience').slideDown(); $('.programmingLanguage, .projects, .relatedCoursework, .resume, .aboutMe, .music, .externalLinks').slideUp(); $('html, body').animate({scrollTop: $('.experience').offset().top }, 600);"  class="btn btn-large btn-block btn-success">Experiences</a>
+          </div>
+        </div> <!-- /row -->
 
-        </header>
-    </div>
+        <div class="row demo-row">
 
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
-        <h3>
-<a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
-
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
-
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
-</code></pre>
-
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
-
-<h3>
-<a name="designer-templates" class="anchor" href="#designer-templates"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
-
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
-
-<h3>
-<a name="rather-drive-stick" class="anchor" href="#rather-drive-stick"><span class="octicon octicon-link"></span></a>Rather Drive Stick?</h3>
-
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
-
-<h3>
-<a name="authors-and-contributors" class="anchor" href="#authors-and-contributors"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
-
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
-
-<h3>
-<a name="support-or-contact" class="anchor" href="#support-or-contact"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out the documentation at <a href="http://help.github.com/pages">http://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
-      </section>
-    </div>
-
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
-      </footer>
-    </div>
+          <div class="span3">
+            <a onclick="$('.resume').slideDown(); $('.programmingLanguage, .projects, .experience, .relatedCoursework, .aboutMe, .music, .externalLinks').slideUp(); $('html, body').animate({scrollTop: $('.resume').offset().top }, 600);"  class="btn btn-large btn-block btn-res">Resume</a>
+          </div>
+          <div class="span3">
+            <a onclick="$('.aboutMe').slideDown(); $('.programmingLanguage, .projects, .experience, .relatedCoursework, .resume, .music, .externalLinks').slideUp(); $('html, body').animate({scrollTop: $('.aboutMe').offset().top }, 600);"  class="btn btn-large btn-block btn-info">About Me</a>
+          </div>
+          <div class="span3">
+            <a onclick="$('.music').slideDown(); $('.programmingLanguage, .projects, .experience, .relatedCoursework, .resume, .aboutMe, .externalLinks').slideUp(); $('html, body').animate({scrollTop: $('.music').offset().top }, 600);"  class="btn btn-block btn-block btn-mus">Music</a>
+          </div>
+          <div class="span3">
+            <a onclick="$('.externalLinks').slideDown(); $('.programmingLanguage, .projects, .experience, .relatedCoursework, .resume, .aboutMe, .music').slideUp(); $('html, body').animate({scrollTop: $('.externalLinks').offset().top }, 600);"  class="btn btn-block btn-block btn-ext">External Links</a>
+          </div>
+        </div> <!-- /row -->
+      </div>
+      <div class="programmingLanguage">
+        <img onclick="$('.programmingLanguage').slideUp(); $('html, body').animate({scrollTop: $('.programmingLanguage').offset().top }, 600);" src="./images/upArrow.png" width=48 height=48 />
+        <br>
+        moo
+      </div>
+      <div class="projects">
+         <img onclick="$('.projects').slideUp(); $('html, body').animate({scrollTop: $('.projects').offset().top }, 600);" src="./images/upArrow.png" width=48 height=48 />
+         <br>
+        moo
+      </div>
+      <div class="relatedCoursework">
+         <img onclick="$('.relatedCoursework').slideUp(); $('html, body').animate({scrollTop: $('.relatedCoursework').offset().top }, 600);" src="./images/upArrow.png" width=48 height=48 />
+         <br>
+        moo
+      </div>
+      <div class="experience">
+         <img onclick="$('.experience').slideUp(); $('html, body').animate({scrollTop: $('.experience').offset().top }, 600);" src="./images/upArrow.png" width=48 height=48 />
+         <br>
+        moo
+      </div>
+      <div class="resume">
+          <img onclick="$('.resume').slideUp(); $('html, body').animate({scrollTop: $('.resume').offset().top }, 600);" src="./images/upArrow.png" width=48 height=48 />
+         <br>
+        moo
+      </div>
+      <div class="aboutMe">
+        <img onclick="$('.aboutMe').slideUp(); $('html, body').animate({scrollTop: $('.aboutMe').offset().top }, 600);" src="./images/upArrow.png" width=48 height=48 />
+         <br>
+        moo
+      </div>
+      <div class="music">
+        <img onclick="$('.music').slideUp(); $('html, body').animate({scrollTop: $('.music').offset().top }, 600);" src="./images/upArrow.png" width=48 height=48 />
+         <br>
+        moo
+      </div>
+      <div class="externalLinks">
+        <img onclick="$('.externalLinks').slideUp(); $('html, body').animate({scrollTop: $('.externalLinks').offset().top }, 600);" src="./images/upArrow.png" width=48 height=48 />
+         <br>
+        moo
+      </div>
+      
 
     
-
+    <!-- Load JS here for greater good =============================-->
+    <script src="js/jquery-1.8.3.min.js"></script>
+    <script src="js/jquery-ui-1.10.3.custom.min.js"></script>
+    <script src="js/jquery.ui.touch-punch.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/bootstrap-select.js"></script>
+    <script src="js/bootstrap-switch.js"></script>
+    <script src="js/flatui-checkbox.js"></script>
+    <script src="js/flatui-radio.js"></script>
+    <script src="js/jquery.tagsinput.js"></script>
+    <script src="js/jquery.placeholder.js"></script>
+    <script src="js/jquery.stacktable.js"></script>
+    <script src="http://vjs.zencdn.net/c/video.js"></script>
+    <script src="js/application.js"></script>
+  
   </body>
 </html>
