--- a/index.html
+++ b/index.html
@@ -1,126 +1,131 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <title>Chu Shao's Webpage</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<head>
+  <meta charset="utf-8">
+  <title>Chu Shao's Webpage</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <!-- Loading Bootstrap -->
-    <link href="bootstrap/css/bootstrap.css" rel="stylesheet">
+  <!-- Loading Bootstrap -->
+  <link href="bootstrap/css/bootstrap.css" rel="stylesheet">
 
-    <!-- Loading Flat UI -->
-    <link href="css/flat-ui.css" rel="stylesheet">
+  <!-- Loading Flat UI -->
+  <link href="css/flat-ui.css" rel="stylesheet">
 
-    <link rel="shortcut icon" href="images/favicon.ico">
+  <link rel="shortcut icon" href="images/favicon.ico">
 
-    <!-- HTML5 shim, for IE6-8 support of HTML5 elements. All other JS at the end of file. -->
+  <!-- HTML5 shim, for IE6-8 support of HTML5 elements. All other JS at the end of file. -->
     <!--[if lt IE 9]>
       <script src="js/html5shiv.js"></script>
-    <![endif]-->
-  </head>
-  <body>
-    <div class="topPart">
-      <div class="container">
-        <div id="top">
-        <div class="chu-headline">
-          <h1 class="chu-logo">
-            <div class="logo"></div>
-            Chu Shao
-            <small>software engineer | deejay</small>
-            <a href="mailto:chu@cshao.me"><small>chu@cshao.me</small></a>
-          </h1>
-        </div> <!-- /demo-headline -->
-      </div>
+      <![endif]-->
+    </head>
+    <body>
+      <div class="topPart">
+        <div class="container-fluid">
+          <div id="top">
+            <div class="chu-headline">
+              <h1 class="chu-logo">
+                <div class="logo"></div>
+                Chu Shao
+                <small>software engineer | deejay</small>
+                <a href="mailto:chu@cshao.me"><small>chu@cshao.me</small></a>
+              </h1>
+            </div> <!-- /demo-headline -->
+          </div>
+          <div class="row list-row">
 
+            <div class="span3" style="min-width: 250px">
+              <a onclick="$('.programmingLanguage').slideDown(); $('.projects, .relatedCoursework, .experience, .resume, .aboutMe, .music, .externalLinks').slideUp(); $('html, body').animate({scrollTop: $('.programmingLanguage').offset().top }, 600);" class="btn btn-large btn-block btn-pl">Programming Languages</a>
+            </div>
 
-        <div class="row demo-row">
-          <div class="span3">
-            <a onclick="$('.programmingLanguage').slideDown(); $('.projects, .relatedCoursework, .experience, .resume, .aboutMe, .music, .externalLinks').slideUp(); $('html, body').animate({scrollTop: $('.programmingLanguage').offset().top }, 600);" class="btn btn-large btn-block btn-pl">Programming Languages</a>
-          </div>
-          <div class="span3">
-            <a onclick="$('.projects').slideDown(); $('.programmingLanguage, .relatedCoursework, .experience, .resume, .aboutMe, .music, .externalLinks').slideUp(); $('html, body').animate({scrollTop: $('.projects').offset().top }, 600);" class="btn btn-large btn-block btn-projects">Projects</a>
-          </div>
-          <div class="span3">
-            <a onclick="$('.relatedCoursework').slideDown(); $('.programmingLanguage, .projects, .experience, .resume, .aboutMe, .music, .externalLinks').slideUp(); $('html, body').animate({scrollTop: $('.relatedCoursework').offset().top }, 600);" class="btn btn-large btn-block btn-rc">Related Coursework</a>
-          </div>
-          <div class="span3">
-            <a onclick="$('.experience').slideDown(); $('.programmingLanguage, .projects, .relatedCoursework, .resume, .aboutMe, .music, .externalLinks').slideUp(); $('html, body').animate({scrollTop: $('.experience').offset().top }, 600);"  class="btn btn-large btn-block btn-success">Experiences</a>
-          </div>
-        </div> <!-- /row -->
+            <div class="span3" style="min-width: 250px">
+              <a onclick="$('.projects').slideDown(); $('.programmingLanguage, .relatedCoursework, .experience, .resume, .aboutMe, .music, .externalLinks').slideUp(); $('html, body').animate({scrollTop: $('.projects').offset().top }, 600);" class="btn btn-large btn-block btn-projects">Projects</a>
+            </div>
 
-        <div class="row demo-row">
+            <div class="span3" style="min-width: 250px">
+              <a onclick="$('.relatedCoursework').slideDown(); $('.programmingLanguage, .projects, .experience, .resume, .aboutMe, .music, .externalLinks').slideUp(); $('html, body').animate({scrollTop: $('.relatedCoursework').offset().top }, 600);" class="btn btn-large btn-block btn-rc">Related Coursework</a>
+            </div>
 
-          <div class="span3">
-            <a onclick="$('.resume').slideDown(); $('.programmingLanguage, .projects, .experience, .relatedCoursework, .aboutMe, .music, .externalLinks').slideUp(); $('html, body').animate({scrollTop: $('.resume').offset().top }, 600);"  class="btn btn-large btn-block btn-res">Resume</a>
-          </div>
-          <div class="span3">
-            <a onclick="$('.aboutMe').slideDown(); $('.programmingLanguage, .projects, .experience, .relatedCoursework, .resume, .music, .externalLinks').slideUp(); $('html, body').animate({scrollTop: $('.aboutMe').offset().top }, 600);"  class="btn btn-large btn-block btn-info">About Me</a>
-          </div>
-          <div class="span3">
-            <a onclick="$('.music').slideDown(); $('.programmingLanguage, .projects, .experience, .relatedCoursework, .resume, .aboutMe, .externalLinks').slideUp(); $('html, body').animate({scrollTop: $('.music').offset().top }, 600);"  class="btn btn-block btn-block btn-mus">Music</a>
-          </div>
-          <div class="span3">
-            <a onclick="$('.externalLinks').slideDown(); $('.programmingLanguage, .projects, .experience, .relatedCoursework, .resume, .aboutMe, .music').slideUp(); $('html, body').animate({scrollTop: $('.externalLinks').offset().top }, 600);"  class="btn btn-block btn-block btn-ext">External Links</a>
-          </div>
-        </div> <!-- /row -->
-      </div>
-      <div class="programmingLanguage">
-        <img onclick="$('.programmingLanguage').slideUp(); $('html, body').animate({scrollTop: $('.programmingLanguage').offset().top }, 600);" src="./images/upArrow.png" width=48 height=48 />
-        <br>
-        moo
-      </div>
-      <div class="projects">
+            <div class="span3" style="min-width: 250px">
+              <a onclick="$('.experience').slideDown(); $('.programmingLanguage, .projects, .relatedCoursework, .resume, .aboutMe, .music, .externalLinks').slideUp(); $('html, body').animate({scrollTop: $('.experience').offset().top }, 600);"  class="btn btn-large btn-block btn-success">Experiences</a>
+            </div>
+          </div> <!-- /row -->
+
+          <div class="row list-row">
+
+            <div class="span3" style="min-width: 250px">
+              <a onclick="$('.resume').slideDown(); $('.programmingLanguage, .projects, .experience, .relatedCoursework, .aboutMe, .music, .externalLinks').slideUp(); $('html, body').animate({scrollTop: $('.resume').offset().top }, 600);"  class="btn btn-large btn-block btn-res">Resume</a>
+            </div>
+
+            <div class="span3" style="min-width: 250px">
+              <a onclick="$('.aboutMe').slideDown(); $('.programmingLanguage, .projects, .experience, .relatedCoursework, .resume, .music, .externalLinks').slideUp(); $('html, body').animate({scrollTop: $('.aboutMe').offset().top }, 600);"  class="btn btn-large btn-block btn-info">About Me</a>
+            </div>
+
+            <div class="span3" style="min-width: 250px">
+              <a onclick="$('.music').slideDown(); $('.programmingLanguage, .projects, .experience, .relatedCoursework, .resume, .aboutMe, .externalLinks').slideUp(); $('html, body').animate({scrollTop: $('.music').offset().top }, 600);"  class="btn btn-block btn-block btn-mus">Music</a>
+            </div>
+
+            <div class="span3" style="min-width: 250px">
+              <a onclick="$('.externalLinks').slideDown(); $('.programmingLanguage, .projects, .experience, .relatedCoursework, .resume, .aboutMe, .music').slideUp(); $('html, body').animate({scrollTop: $('.externalLinks').offset().top }, 600);"  class="btn btn-block btn-block btn-ext">External Links</a>
+            </div>
+          </div> <!-- /row -->
+        </div>
+        <div class="programmingLanguage">
+          <img onclick="$('.programmingLanguage').slideUp(); $('html, body').animate({scrollTop: $('.programmingLanguage').offset().top }, 600);" src="./images/upArrow.png" width=48 height=48 />
+          <br>
+          moo
+        </div>
+        <div class="projects">
          <img onclick="$('.projects').slideUp(); $('html, body').animate({scrollTop: $('.projects').offset().top }, 600);" src="./images/upArrow.png" width=48 height=48 />
          <br>
-        moo
-      </div>
-      <div class="relatedCoursework">
+         moo
+       </div>
+       <div class="relatedCoursework">
          <img onclick="$('.relatedCoursework').slideUp(); $('html, body').animate({scrollTop: $('.relatedCoursework').offset().top }, 600);" src="./images/upArrow.png" width=48 height=48 />
          <br>
-        moo
-      </div>
-      <div class="experience">
+         moo
+       </div>
+       <div class="experience">
          <img onclick="$('.experience').slideUp(); $('html, body').animate({scrollTop: $('.experience').offset().top }, 600);" src="./images/upArrow.png" width=48 height=48 />
          <br>
-        moo
-      </div>
-      <div class="resume">
-          <img onclick="$('.resume').slideUp(); $('html, body').animate({scrollTop: $('.resume').offset().top }, 600);" src="./images/upArrow.png" width=48 height=48 />
-         <br>
+         moo
+       </div>
+       <div class="resume">
+        <img onclick="$('.resume').slideUp(); $('html, body').animate({scrollTop: $('.resume').offset().top }, 600);" src="./images/upArrow.png" width=48 height=48 />
+        <br>
         moo
       </div>
       <div class="aboutMe">
         <img onclick="$('.aboutMe').slideUp(); $('html, body').animate({scrollTop: $('.aboutMe').offset().top }, 600);" src="./images/upArrow.png" width=48 height=48 />
-         <br>
+        <br>
         moo
       </div>
       <div class="music">
         <img onclick="$('.music').slideUp(); $('html, body').animate({scrollTop: $('.music').offset().top }, 600);" src="./images/upArrow.png" width=48 height=48 />
-         <br>
+        <br>
         moo
       </div>
       <div class="externalLinks">
         <img onclick="$('.externalLinks').slideUp(); $('html, body').animate({scrollTop: $('.externalLinks').offset().top }, 600);" src="./images/upArrow.png" width=48 height=48 />
-         <br>
+        <br>
         moo
       </div>
       
 
-    
-    <!-- Load JS here for greater good =============================-->
-    <script src="js/jquery-1.8.3.min.js"></script>
-    <script src="js/jquery-ui-1.10.3.custom.min.js"></script>
-    <script src="js/jquery.ui.touch-punch.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/bootstrap-select.js"></script>
-    <script src="js/bootstrap-switch.js"></script>
-    <script src="js/flatui-checkbox.js"></script>
-    <script src="js/flatui-radio.js"></script>
-    <script src="js/jquery.tagsinput.js"></script>
-    <script src="js/jquery.placeholder.js"></script>
-    <script src="js/jquery.stacktable.js"></script>
-    <script src="http://vjs.zencdn.net/c/video.js"></script>
-    <script src="js/application.js"></script>
-  
-  </body>
-</html>
+
+      <!-- Load JS here for greater good =============================-->
+      <script src="js/jquery-1.8.3.min.js"></script>
+      <script src="js/jquery-ui-1.10.3.custom.min.js"></script>
+      <script src="js/jquery.ui.touch-punch.min.js"></script>
+      <script src="js/bootstrap.min.js"></script>
+      <script src="js/bootstrap-select.js"></script>
+      <script src="js/bootstrap-switch.js"></script>
+      <script src="js/flatui-checkbox.js"></script>
+      <script src="js/flatui-radio.js"></script>
+      <script src="js/jquery.tagsinput.js"></script>
+      <script src="js/jquery.placeholder.js"></script>
+      <script src="js/jquery.stacktable.js"></script>
+      <script src="http://vjs.zencdn.net/c/video.js"></script>
+      <script src="js/application.js"></script>
+
+    </body>
+    </html>
