--- a/index.html
+++ b/index.html
@@ -32,100 +32,189 @@
             </div> <!-- /demo-headline -->
           </div>
           <div class="row list-row">
-
             <div class="span3" style="min-width: 250px">
-              <a onclick="$('.programmingLanguage').slideDown(); $('.projects, .relatedCoursework, .experience, .resume, .aboutMe, .music, .externalLinks').slideUp(); $('html, body').animate({scrollTop: $('.programmingLanguage').offset().top }, 600);" class="btn btn-large btn-block btn-pl">Programming Languages</a>
+              <a onclick="$('.programmingLanguage').slideDown(); $('.projects, .relatedCoursework, .experience, .resume, .aboutMe, .music, .externalLinks').slideUp(); $('html, body').animate({scrollTop: $('.programmingLanguage').offset().top }, 600);" class="btn btn-large btn-block btn-pl">programming languages</a>
             </div>
 
             <div class="span3" style="min-width: 250px">
-              <a onclick="$('.projects').slideDown(); $('.programmingLanguage, .relatedCoursework, .experience, .resume, .aboutMe, .music, .externalLinks').slideUp(); $('html, body').animate({scrollTop: $('.projects').offset().top }, 600);" class="btn btn-large btn-block btn-projects">Projects</a>
+              <a onclick="$('.projects').slideDown(); $('.programmingLanguage, .relatedCoursework, .experience, .resume, .aboutMe, .music, .externalLinks').slideUp(); $('html, body').animate({scrollTop: $('.projects').offset().top }, 600);" class="btn btn-large btn-block btn-projects">projects</a>
             </div>
 
             <div class="span3" style="min-width: 250px">
-              <a onclick="$('.relatedCoursework').slideDown(); $('.programmingLanguage, .projects, .experience, .resume, .aboutMe, .music, .externalLinks').slideUp(); $('html, body').animate({scrollTop: $('.relatedCoursework').offset().top }, 600);" class="btn btn-large btn-block btn-rc">Related Coursework</a>
+              <a onclick="$('.relatedCoursework').slideDown(); $('.programmingLanguage, .projects, .experience, .resume, .aboutMe, .music, .externalLinks').slideUp(); $('html, body').animate({scrollTop: $('.relatedCoursework').offset().top }, 600);" class="btn btn-large btn-block btn-rc">related coursework</a>
             </div>
 
             <div class="span3" style="min-width: 250px">
-              <a onclick="$('.experience').slideDown(); $('.programmingLanguage, .projects, .relatedCoursework, .resume, .aboutMe, .music, .externalLinks').slideUp(); $('html, body').animate({scrollTop: $('.experience').offset().top }, 600);"  class="btn btn-large btn-block btn-success">Experiences</a>
+              <a onclick="$('.experience').slideDown(); $('.programmingLanguage, .projects, .relatedCoursework, .resume, .aboutMe, .music, .externalLinks').slideUp(); $('html, body').animate({scrollTop: $('.experience').offset().top }, 600);"  class="btn btn-large btn-block btn-success">experiences</a>
             </div>
           </div> <!-- /row -->
-
           <div class="row list-row">
-
             <div class="span3" style="min-width: 250px">
-              <a onclick="$('.resume').slideDown(); $('.programmingLanguage, .projects, .experience, .relatedCoursework, .aboutMe, .music, .externalLinks').slideUp(); $('html, body').animate({scrollTop: $('.resume').offset().top }, 600);"  class="btn btn-large btn-block btn-res">Resume</a>
+              <a onclick="$('.resume').slideDown(); $('.programmingLanguage, .projects, .experience, .relatedCoursework, .aboutMe, .music, .externalLinks').slideUp(); $('html, body').animate({scrollTop: $('.resume').offset().top }, 600);"  class="btn btn-large btn-block btn-res">resume</a>
             </div>
 
             <div class="span3" style="min-width: 250px">
-              <a onclick="$('.aboutMe').slideDown(); $('.programmingLanguage, .projects, .experience, .relatedCoursework, .resume, .music, .externalLinks').slideUp(); $('html, body').animate({scrollTop: $('.aboutMe').offset().top }, 600);"  class="btn btn-large btn-block btn-info">About Me</a>
+              <a onclick="$('.aboutMe').slideDown(); $('.programmingLanguage, .projects, .experience, .relatedCoursework, .resume, .music, .externalLinks').slideUp(); $('html, body').animate({scrollTop: $('.aboutMe').offset().top }, 600);"  class="btn btn-large btn-block btn-info">about me</a>
             </div>
 
             <div class="span3" style="min-width: 250px">
-              <a onclick="$('.music').slideDown(); $('.programmingLanguage, .projects, .experience, .relatedCoursework, .resume, .aboutMe, .externalLinks').slideUp(); $('html, body').animate({scrollTop: $('.music').offset().top }, 600);"  class="btn btn-block btn-block btn-mus">Music</a>
+              <a onclick="$('.music').slideDown(); $('.programmingLanguage, .projects, .experience, .relatedCoursework, .resume, .aboutMe, .externalLinks').slideUp(); $('html, body').animate({scrollTop: $('.music').offset().top }, 600);"  class="btn btn-block btn-block btn-mus">music</a>
             </div>
 
             <div class="span3" style="min-width: 250px">
-              <a onclick="$('.externalLinks').slideDown(); $('.programmingLanguage, .projects, .experience, .relatedCoursework, .resume, .aboutMe, .music').slideUp(); $('html, body').animate({scrollTop: $('.externalLinks').offset().top }, 600);"  class="btn btn-block btn-block btn-ext">External Links</a>
+              <a onclick="$('.externalLinks').slideDown(); $('.programmingLanguage, .projects, .experience, .relatedCoursework, .resume, .aboutMe, .music').slideUp(); $('html, body').animate({scrollTop: $('.externalLinks').offset().top }, 600);"  class="btn btn-block btn-block btn-ext">external links</a>
             </div>
           </div> <!-- /row -->
         </div>
-        <div class="programmingLanguage">
+      </div>
+      <div class="programmingLanguage">
+        <div class="closeButton">
           <img onclick="$('.programmingLanguage').slideUp(); $('html, body').animate({scrollTop: $('.programmingLanguage').offset().top }, 600);" src="./images/upArrow.png" width=48 height=48 />
-          <br>
-          moo
         </div>
-        <div class="projects">
+        <h3>programming languages</h3>
+        <h4>
+          <ul>
+            <li>python</li>
+            <li>javascript/coffeescript</li>
+            <li>php</li>
+            <li>ruby</li>
+            <li>java</li>
+            <li>c</li>
+            <li>c++</li>
+            <li>matlab</li>
+            <li>shell script</li>
+            <li>sparc assembly</li>
+            <li>ocaml</li>
+            <li>scala</li>
+            <li>go</li>
+          </ul>
+        </h4>
+        <h3>web frameworks</h3>
+        <h4>
+          <ul>
+            <li>symfony</li>
+            <li>node.js</li>
+            <li>requirejs</li>
+            <li>express</li>
+            <li>jquery</li>
+            <li>flask</li>
+            <li>django</li>
+            <li>zend framework</li>
+            <li>sinatra</li>
+            <li>ruby on rails</li>
+          </ul>
+        </h4>
+        <h3>sql</h3>
+        <h4>
+          <ul>
+            <li>mysql</li>
+            <li>oracle database 11g</li>
+            <li>postgresql</li>
+            <li>couchdb</li>
+          </ui>
+        </h4>
+        <h3>devops/other</h3>
+        <h4>
+          <ul>
+            <li>confluence</li>
+            <li>jira</li>
+            <li>stash</li>
+            <li>solr</li>
+            <li>intermapper</li>
+            <li>cacti</li>
+            <li>orion npm</li>
+            <li>autoesl</li>
+          </ul>
+
+
+
+      </div>
+      <div class="projects">
+        <div class="closeButton">
          <img onclick="$('.projects').slideUp(); $('html, body').animate({scrollTop: $('.projects').offset().top }, 600);" src="./images/upArrow.png" width=48 height=48 />
-         <br>
-         moo
        </div>
-       <div class="relatedCoursework">
+       <br>
+       moo
+     </div>
+     <div class="relatedCoursework">
+       <div class="closeButton">
          <img onclick="$('.relatedCoursework').slideUp(); $('html, body').animate({scrollTop: $('.relatedCoursework').offset().top }, 600);" src="./images/upArrow.png" width=48 height=48 />
-         <br>
-         moo
        </div>
-       <div class="experience">
-         <img onclick="$('.experience').slideUp(); $('html, body').animate({scrollTop: $('.experience').offset().top }, 600);" src="./images/upArrow.png" width=48 height=48 />
-         <br>
-         moo
-       </div>
-       <div class="resume">
+       <h3>related coursework</h3>
+       <h4>
+       <ul>
+        <li>fluency in information technology</li>
+        <li>introduction to programming with matlab</li>
+        <li>introduction to computer science and object-oriented programming: java</li>
+        <li>basic data structures and object-oriented design</li>
+        <li>discrete mathematics</li>
+        <li>computer organization and systems programming</li>
+        <li>advanced data structures</li>
+        <li>design and analysis of algorithms</li>
+        <li>probability and statistics</li>
+        <li>theory of computability</li>
+        <li>software engineering</li>
+        <li>principles of computer operating systems</li>
+        <li>programming languages: principles and paradigms</li>
+        <li>compiler construction</li>
+        <li>global ties: team engineering</li>
+        <li>embedded system design project</li>
+        <li>independent study: concurrent programming with go </li>
+      </ul>
+    </h4>
+     </div>
+     <div class="experience">
+       <div class="closeButton">
+        <img onclick="$('.experience').slideUp(); $('html, body').animate({scrollTop: $('.experience').offset().top }, 600);" src="./images/upArrow.png" width=48 height=48 />
+      </div>
+      <br>
+      moo
+    </div>
+    <div class="resume">
+      <div class="closeButton">
         <img onclick="$('.resume').slideUp(); $('html, body').animate({scrollTop: $('.resume').offset().top }, 600);" src="./images/upArrow.png" width=48 height=48 />
-        <br>
-        moo
       </div>
-      <div class="aboutMe">
+      <br>
+      moo
+    </div>
+    <div class="aboutMe">
+      <div class="closeButton">
         <img onclick="$('.aboutMe').slideUp(); $('html, body').animate({scrollTop: $('.aboutMe').offset().top }, 600);" src="./images/upArrow.png" width=48 height=48 />
-        <br>
-        moo
       </div>
-      <div class="music">
+      <br>
+      moo
+    </div>
+    <div class="music">
+      <div class="closeButton">
         <img onclick="$('.music').slideUp(); $('html, body').animate({scrollTop: $('.music').offset().top }, 600);" src="./images/upArrow.png" width=48 height=48 />
-        <br>
-        moo
       </div>
-      <div class="externalLinks">
+      <br>
+      moo
+    </div>
+    <div class="externalLinks">
+      <div class="closeButton">
         <img onclick="$('.externalLinks').slideUp(); $('html, body').animate({scrollTop: $('.externalLinks').offset().top }, 600);" src="./images/upArrow.png" width=48 height=48 />
-        <br>
-        moo
       </div>
-      
+      <br>
+      moo
+    </div>
 
 
-      <!-- Load JS here for greater good =============================-->
-      <script src="js/jquery-1.8.3.min.js"></script>
-      <script src="js/jquery-ui-1.10.3.custom.min.js"></script>
-      <script src="js/jquery.ui.touch-punch.min.js"></script>
-      <script src="js/bootstrap.min.js"></script>
-      <script src="js/bootstrap-select.js"></script>
-      <script src="js/bootstrap-switch.js"></script>
-      <script src="js/flatui-checkbox.js"></script>
-      <script src="js/flatui-radio.js"></script>
-      <script src="js/jquery.tagsinput.js"></script>
-      <script src="js/jquery.placeholder.js"></script>
-      <script src="js/jquery.stacktable.js"></script>
-      <script src="http://vjs.zencdn.net/c/video.js"></script>
-      <script src="js/application.js"></script>
 
-    </body>
-    </html>
+    <!-- Load JS here for greater good =============================-->
+    <script src="js/jquery-1.8.3.min.js"></script>
+    <script src="js/jquery-ui-1.10.3.custom.min.js"></script>
+    <script src="js/jquery.ui.touch-punch.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/bootstrap-select.js"></script>
+    <script src="js/bootstrap-switch.js"></script>
+    <script src="js/flatui-checkbox.js"></script>
+    <script src="js/flatui-radio.js"></script>
+    <script src="js/jquery.tagsinput.js"></script>
+    <script src="js/jquery.placeholder.js"></script>
+    <script src="js/jquery.stacktable.js"></script>
+    <script src="http://vjs.zencdn.net/c/video.js"></script>
+    <script src="js/application.js"></script>
+
+  </body>
+  </html>
