Updated external Links

--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
         </div>
         <div class="downloadResumeArea">
           <br>
-          <h4><a class="btn btn btn-rc" href="assets/Chu_Shao_Resume.pdf">download here</a></h4>
+          <h4><a class="btn btn btn-rc" href="assets/Chu_Shao_Resume.pdf">download</a></h4>
           <br>
         </div>
       </div>
@@ -272,7 +272,8 @@
           <img onclick="$('.aboutMe').slideUp(); $('html, body').animate({scrollTop: $('.aboutMe').offset().top }, 600);" src="./images/upArrow.png" width=48 height=48 />
         </div>
         <br>
-        moo
+        Hello, my name is Chu and I'm currently a senior at UCSD, majoring in Computer Science. 
+        In my spare time, I DJ and create mashups under the name DJChuwy. 
       </div>
       <div class="music">
         <div class="closeButton">
@@ -286,7 +287,24 @@
           <img onclick="$('.externalLinks').slideUp(); $('html, body').animate({scrollTop: $('.externalLinks').offset().top }, 600);" src="./images/upArrow.png" width=48 height=48 />
         </div>
         <br>
-        moo
+        <div class="extLinkArea">
+          <a href="http://www.github.com/chushao">
+            <img src="./images/github.png" width=64 height=64 />
+          </a>
+          <a href="http://www.linkedin.com/in/chushao">
+            <img src="./images/linkedin.png" width=64 height=64 />
+          </a>
+          <a href="http://www.coderwall.com/cshao">
+            <img src="./images/coderwall.png" width=64 height=64 />
+          </a>
+          <a href="http://www.mixcloud.com/Pikachuu/">
+            <img src="./images/mixcloud.png" width=72 height=72 />
+          </a>
+          <a href="http://www.djchuwy.com">
+            <img src="./images/djchuwy.png" width=56 height=56 />
+          </a>
+        </div>
+        <br>
       </div>
     </div>
 
@@ -304,7 +322,6 @@
     <script src="js/jquery.tagsinput.js"></script>
     <script src="js/jquery.placeholder.js"></script>
     <script src="js/jquery.stacktable.js"></script>
-    <script src="http://vjs.zencdn.net/c/video.js"></script>
     <script src="js/application.js"></script>
 
 
