--- a/index.html
+++ b/index.html
@@ -279,6 +279,7 @@
         <div class="closeButton">
           <img onclick="$('.music').slideUp(); $('html, body').animate({scrollTop: $('.music').offset().top }, 600);" src="./images/upArrow.png" width=48 height=48 />
         </div>
+        <iframe width="100%" height="480" src="http://www.mixcloud.com/widget/iframe/?feed=http%3A%2F%2Fwww.mixcloud.com%2FPikachuu%2F%3Flimit%3D10&embed_uuid=be82996a-aea4-4e7e-8818-e06d1a5fd1c9&stylecolor=&embed_type=widget_standard" frameborder="0"></iframe><div style="clear:both; height:3px; width:auto;"></div><p style="display:block; font-size:12px; font-family:Helvetica, Arial, sans-serif; margin:0; padding: 3px 4px; color:#02a0c7; width:auto;"><a href="http://www.mixcloud.com/Pikachuu/?utm_source=widget&amp;utm_medium=web&amp;utm_campaign=base_links&amp;utm_term=resource_link" target="_blank" style="color:#02a0c7; font-weight:bold;">Latest Chu Shao&#39;s Cloudcasts</a><span> on </span><a href="http://www.mixcloud.com/?utm_source=widget&utm_medium=web&utm_campaign=base_links&utm_term=homepage_link" target="_blank" style="color:#02a0c7; font-weight:bold;"> Mixcloud</a></p><div style="clear:both; height:3px;"></div>
         <br>
         moo
       </div>
