--- a/index.html
+++ b/index.html
@@ -115,6 +115,7 @@
           <h3>devops/other</h3>
           <h4>
             <ul>
+              <li>solr</li> 
               <li>confluence</li>
               <li>jira</li>
               <li>stash</li>
@@ -279,9 +280,12 @@
         <div class="closeButton">
           <img onclick="$('.music').slideUp(); $('html, body').animate({scrollTop: $('.music').offset().top }, 600);" src="./images/upArrow.png" width=48 height=48 />
         </div>
-        <iframe width="100%" height="480" src="http://www.mixcloud.com/widget/iframe/?feed=http%3A%2F%2Fwww.mixcloud.com%2FPikachuu%2F%3Flimit%3D10&embed_uuid=be82996a-aea4-4e7e-8818-e06d1a5fd1c9&stylecolor=&embed_type=widget_standard" frameborder="0"></iframe><div style="clear:both; height:3px; width:auto;"></div><p style="display:block; font-size:12px; font-family:Helvetica, Arial, sans-serif; margin:0; padding: 3px 4px; color:#02a0c7; width:auto;"><a href="http://www.mixcloud.com/Pikachuu/?utm_source=widget&amp;utm_medium=web&amp;utm_campaign=base_links&amp;utm_term=resource_link" target="_blank" style="color:#02a0c7; font-weight:bold;">Latest Chu Shao&#39;s Cloudcasts</a><span> on </span><a href="http://www.mixcloud.com/?utm_source=widget&utm_medium=web&utm_campaign=base_links&utm_term=homepage_link" target="_blank" style="color:#02a0c7; font-weight:bold;"> Mixcloud</a></p><div style="clear:both; height:3px;"></div>
-        <br>
-        moo
+           <a href="http://www.mixcloud.com/Pikachuu/">
+            <img src="./images/mixcloud.png" width=72 height=72 />
+          </a>
+          <a href="http://www.djchuwy.com">
+            <img src="./images/djchuwy.png" width=56 height=56 />
+          </a>       
       </div>
       <div class="externalLinks">
         <div class="closeButton">
@@ -297,12 +301,6 @@
           </a>
           <a href="http://www.coderwall.com/cshao">
             <img src="./images/coderwall.png" width=64 height=64 />
-          </a>
-          <a href="http://www.mixcloud.com/Pikachuu/">
-            <img src="./images/mixcloud.png" width=72 height=72 />
-          </a>
-          <a href="http://www.djchuwy.com">
-            <img src="./images/djchuwy.png" width=56 height=56 />
           </a>
         </div>
         <br>
