--- a/index.html
+++ b/index.html
@@ -210,6 +210,9 @@
             <li>global ties: team engineering</li>
             <li>embedded system design project</li>
             <li>independent study: concurrent programming with go </li>
+            <li>matlab for experimental research</li>
+            <li>ubiquitous computing</li>
+            <li>components and design techniques for digital systems</li>
           </ul>
           <br>
         </h4>
@@ -220,6 +223,11 @@
       </div>
       <h3>experience</h3>
       <ul>
+        <li>
+          <h4>cbs interactive - software engineer intern - june 2013 to september 2013</h4>
+          <h5>replatformed a popular cbs interactive website onto a new internal content and audience management system. in addition, coded in various industry standard languages and software stacks, including symfony2, requirejs, jquery, php, twig, html5 and javascript. also optimized solr search indexer and managed bug fixes.
+          </h5>
+        </li>
         <li>
           <h4>ucsd - cse 8b tutor - april 2013 to june 2013</h4>
           <h5>tutored for cse 8b: introduction to java programming class. worked with students on providing help and comprehension on their programming assignments and graded problem solving assignments.
@@ -239,7 +247,7 @@
         </li>
         <br>
         <li>
-          <h4>ocean observatories initiative - systems and network support - june 2011 to present</h4>
+          <h4>ocean observatories initiative - systems and network support - june 2011 to october 2013</h4>
           <h5>manage 5 different network-monitoring tools, modify and create bash scripts, and do various miscellaneous troubleshooting jobs such as setting up servers, installing virtual machines, write shell scripts, design visio charts, and technical support for staff members.
           </h5>
         </li>
