--- a/index.html
+++ b/index.html
@@ -195,6 +195,7 @@
   						MySQL<br>
   						Oracle Database 11g<br>
   						PostgreSQL <br>
+              MongoDB<br>
   						CouchDB
   					</p>
   				</div>					
@@ -212,7 +213,56 @@
   			<div class="col-lg-2 col-lg-offset-1">
   				<h5>PROJECTS</h5>
   			</div>
-  			<div class="col-lg-6">
+
+        <div class="col-lg-6">
+          <p><t>Balancr</t><br/>
+            Human Computer Interaction Project: CSE 170 <br/>
+          </p>
+          <p>Project class focused on gathering data on user needs and creating an application that fits the needs through concepts of usability engineering and human computer interaction. Designed an iPhone based web application that allows users to insert details about their lifestyles and generate graphs based on the desired details. 
+            <br><a href="http://balancr.herokuapp.com">http://balancr.herokuapp.com</a>
+            <br><a href="assets/Balancr.png">Poster</a>
+          </p>
+        </div>
+        <div class="col-lg-3">
+          <p><sm>JANUARY 2014 - MARCH 2014</sm></p>
+        </div>
+
+        <div class="col-lg-6 col-lg-offset-3">
+          <p><t>Chroma</t><br/>
+            Google Glass Project<br/>
+          </p>
+          <p>Chroma is a Google Glass project. At the moment, details cannot be explained as this is a research project/paper under review. 
+          </p>
+        </div>
+        <div class="col-lg-3">
+          <p><sm>JANUARY 2014 - MARCH 2014</sm></p>
+        </div>
+
+
+        <div class="col-lg-6 col-lg-offset-3">
+          <p><t>TimeWastr</t><br/>
+            Android/Web Server Interface project<br/>
+          </p>
+          <p>TimeWastr is an application that grabs articles from websites, calculates the words of each article and allow users to read the articles at an average wpm pace by the time they desire. This application utilizes a Node.js backend that communicates completely through API calls to a front end Android Application.
+          </p>
+        </div>
+        <div class="col-lg-3">
+          <p><sm>JANUARY 2014 - MARCH 2014</sm></p>
+        </div>
+
+        <div class="col-lg-6 col-lg-offset-3">
+          <p><t>Vendos</t><br/>
+            Kinect/Arduino Project<br/>
+          </p>
+          <p>Vendos is an home automation project designed to interface Kinect with an Arduino, and allows the user to control home appliances through movements and voice commands. This project focuses on creating a Ubiquitous home environment on the budget and allows users to have a DIY project that can control appliances.
+            <br><a href="assets/Vendos_research_paper.pdf">Research Paper</a></p>
+          </p>
+        </div>
+        <div class="col-lg-3">
+          <p><sm>SEPTEMBER 2013 - DECEMBER 2013</sm></p>
+        </div>
+
+  			<div class="col-lg-6 col-lg-offset-3">
   				<p><t>Humanitarian Engineering Project</t><br/>
   					We Have We Need <br/>
   				</p>
