--- a/index.html
+++ b/index.html
@@ -97,16 +97,17 @@
   				<h5>WORK</h5>
   			</div>
   			<div class="col-lg-6">
-  				<p><t>Software Engineer - Intern</t><br/>
+  				<p><t>Software Engineer</t><br/>
   					CBS Interactive <br/>
   				</p>
   				<p>Replatformed a popular CBS Interactive website onto a new internal content and audience management system. In addition, coded in various industry standard languages and software stacks, including symfony2, requirejs, jquery, php, twig, html5 and javascript. Also optimized solr search indexer and managed bug fixes.</p>
-  			</div>
+                                <p>West Coast PoC for managing deploys, fixing blockers and running data migrations. In addition, one of the main software engineers on the backend for ZDNet replatform and focusing on implementing a backend system that fits what ZDNet needs.</p>
+                        </div>
   			<div class="col-lg-3">
-  				<p><sm>JUNE 2013 - SEPTEMBER 2013</sm></p>
-  			</div>
-
-  			<div class="col-lg-6 col-lg-offset-3">
+  				<p><sm>SEPTEMBER 2013 - CURRENT</sm></p>
+                                <p><sm>INTERN: <br> JUNE 2013 - SEPTEMBER 2013</sm></p>
+                        </div>
+      			<div class="col-lg-6 col-lg-offset-3">
   				<p><t>CSE 8B Tutor</t><br/>
   					UCSD <br/>
   				</p>
@@ -382,8 +383,7 @@
   							
   							</div>
   							<div class="col-lg-3">
-  								<p><sm>GRADUATING IN JUNE 2014</sm><br/>
-  									<imp><sm>IN PROGRESS</sm></imp>
+  								<p><sm>GRADUATED JUNE 2014</sm><br/>
   								</p>
   							</div>
 
