Added publications field

--- a/index.html
+++ b/index.html
@@ -44,11 +44,12 @@
   			<a href="#skills" class="smoothScroll">Skills</a>
   			<a href="#projects" class="smoothScroll">Projects</a>
   			<a href="#education" class="smoothScroll">Education</a>
-  			<a href="#music" class="smoothScroll">Music</a>
+  			<a href="#publications" class="smoothScroll">Publications</a>
   			<a href="#contact" class="smoothScroll">Contact</a>
   			<a href="https://www.linkedin.com/in/chushao"><i class="icon-linkedin"></i></a>
   			<a href="https://github.com/chushao"><i class="icon-github"></i></a>
   			<a href="mailto:chu@cshao.me"><i class="icon-envelope"></i></a>
+                        <a href="https://www.mixcloud.com/Pikachuu"><i class="icon-music"></i></a>
   		</div>
 
   		<!-- Menu button -->
@@ -394,26 +395,21 @@
   				</div><!--/.container -->
 
 
-  				<section id="music" name="music"></section>
+  				<section id="publications" name="publications"></section>
   				<!--AWARDS DESCRIPTION -->
   				<div class="container desc">
   					<div class="row">
   						<div class="col-lg-2 col-lg-offset-1">
-  							<h5>Music</h5>
+  							<h5>Publications</h5>
   						</div>
   						<div class="col-lg-6">
-  							<p><t><a href="http://www.mixcloud.com/Pikachuu">Mixcloud</a></t><br/>
-  								DJ Chuwy Mixsets
+                                                    <p><t>Chroma: A Wearable Augmented-Reality Solution for Color-Blindness.</t><br/>
+                                                    <sm> Enrico Tanuwidjaja, Derek Huynh, Kirsten Koa, Calvin Nguyen, <b>Churen Shao</b>, Patrick Torbett, Emmenegger Colleen, and
+                                                        Nadir Weibel. Chroma: A Wearable Augmented-Reality Solution for Color-Blindness.<i> In Proceedings of <b>Ubicomp 2014</b>, ACM
+                                                            International Joint Conference on Pervasive and Ubiquitous Computing,</i> Seattle, WA, USA, September 2014. In Press.
+                                                        </sm>
   							</p>
   						</div>
-
-
-  						<div class="col-lg-6 col-lg-offset-3">
-  							<p><t><a href="http://www.djchuwy.com">Djchuwy.com</a></t><br/>
-  								DJ Chuwy Mashups
-  							</p>
-  						</div>
-
   					</div><!--/.row -->
   					<br>
   				</div><!--/.container -->
