Updated with research paper

--- a/index.html
+++ b/index.html
@@ -404,11 +404,12 @@
   						</div>
   						<div class="col-lg-6">
                                                     <p><t>Chroma: A Wearable Augmented-Reality Solution for Color-Blindness.</t><br/>
-                                                    <sm> Enrico Tanuwidjaja, Derek Huynh, Kirsten Koa, Calvin Nguyen, <b>Churen Shao</b>, Patrick Torbett, Emmenegger Colleen, and
-                                                        Nadir Weibel. Chroma: A Wearable Augmented-Reality Solution for Color-Blindness.<i> In Proceedings of <b>Ubicomp 2014</b>, ACM
-                                                            International Joint Conference on Pervasive and Ubiquitous Computing,</i> Seattle, WA, USA, September 2014. In Press.
+                                                    <sm> Enrico Tanuwidjaja, Derek Huynh, Kirsten Koa, Calvin Nguyen, <b>Churen Shao</b>, Patrick Torbett, Colleen Emmenegger, and
+                                                    Nadir Weibel. Chroma: A Wearable Augmented-Reality Solution for Color-Blindness. In <i>Proceedings of <b>Ubicomp 2014</b>, ACM
+                                                            International Joint Conference on Pervasive and Ubiquitous Computing,</i> (UbiComp '14 Adjunct) ACM, New York, NY, USA, 799-810.
                                                         </sm>
   							</p>
+                                                        <p><a href="assets/Chroma.pdf"> Download Our Paper </a></p>
   						</div>
   					</div><!--/.row -->
   					<br>
