Fixed some wording

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
   					<h5>ABOUT</h5>
   				</div>
   				<div class="col-lg-6">
-  					<p>I'm a Computer Science student at UC San Diego with experience in numerous fields. I'm interested in ubiquitous computing and most of my focus has been in web development. In my spare time I DJ and make mixsets.</p>
+  					<p>I'm a Software Engineer at CBS Interactive and on the side my interests are in Ubiquitous Computing. In my spare time I DJ and make mixsets.</p>
   				</div>
   				<div class="col-lg-3" id="resume">
   					<p ><a href="assets/Chu_Shao_Resume.pdf"><i class="icon-file"></i><sm>DOWNLOAD RESUME</sm></a> </p>
@@ -233,8 +233,8 @@
           <p><t>Chroma</t><br/>
             Google Glass Project<br/>
           </p>
-          <p>Chroma is a Google Glass project. At the moment, details cannot be explained as this is a research project/paper under review. 
-          </p>
+          <p> Chroma, a wearable augmented-reality system based on Google Glass that allows users to see a filtered image of the current scene in real-time. Chroma automatically adapts the scene-view based on the type of color blindness, and features dedicated algorithms for color saliency. 
+          <p>Check below for more information </p>
         </div>
         <div class="col-lg-3">
           <p><sm>JANUARY 2014 - MARCH 2014</sm></p>
@@ -405,11 +405,14 @@
   						<div class="col-lg-6">
                                                     <p><t>Chroma: A Wearable Augmented-Reality Solution for Color-Blindness.</t><br/>
                                                     <sm> Enrico Tanuwidjaja, Derek Huynh, Kirsten Koa, Calvin Nguyen, <b>Churen Shao</b>, Patrick Torbett, Colleen Emmenegger, and
-                                                    Nadir Weibel. Chroma: A Wearable Augmented-Reality Solution for Color-Blindness. In <i>Proceedings of <b>Ubicomp 2014</b>, ACM
+                                                    Nadir Weibel. Chroma: A Wearable Augmented-Reality Solution for Color-Blindness. In <i>Proceedings of Ubicomp 2014, ACM
                                                             International Joint Conference on Pervasive and Ubiquitous Computing,</i> (UbiComp '14 Adjunct) ACM, New York, NY, USA, 799-810.
                                                         </sm>
-  							</p>
+                                                        </p>
+                                                </div>
+                                                <div class="col-lg-3">
                                                         <p><a href="assets/Chroma.pdf"> Download Our Paper </a></p>
+                                                        <p><a href="http://dl.acm.org/citation.cfm?id=2632091">ACM Citations Link </a> </p>
   						</div>
   					</div><!--/.row -->
   					<br>
