--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
   					<h5>ABOUT</h5>
   				</div>
   				<div class="col-lg-6">
-  					<p>I'm a Software Engineer at CBS Interactive and on the side my interests are in Ubiquitous Computing. In my spare time I DJ and make mixsets.</p>
+  					<p>I'm a Software Engineer at Udemy and on the side my interests are in Ubiquitous Computing and Internet of Things.</p>
   				</div>
   				<div class="col-lg-3" id="resume">
   					<p ><a href="assets/Chu_Shao_Resume.pdf"><i class="icon-file"></i><sm>DOWNLOAD RESUME</sm></a> </p>
